--- a/config/locales/rails_admin.ru.yml
+++ b/config/locales/rails_admin.ru.yml
@@ -8,7 +8,7 @@ en:
       pagename: "Управление сайтом"
       name: "Контрольная панель"
       model_name: "Название модели"
-      last_used: "Последнее обновление"
+      last_used: "Последнее раз использовалось"
       records: "Записи"
       modify: "Изменить"
       add_new: "Добавить"
