Add translating as a way to contribute

--- a/README.mkd
+++ b/README.mkd
@@ -543,6 +543,7 @@ Here are some ways *you* can contribute:
 * by using alpha, beta, and prerelease versions
 * by reporting bugs
 * by suggesting new features
+* by [translating to a new language](https://github.com/sferik/rails_admin/tree/master/config/locales)
 * by writing or editing documentation
 * by writing specifications
 * by writing code (**no patch is too small**: fix typos, add comments, clean up inconsistent whitespace)
