DRY up field subclassing, rename column_css_class to css_class as it's now used in edit views as well, rename field css classes to match with the types' ruby class names and remove traces to unused big_decimal field type.

--- a/README.mkd
+++ b/README.mkd
@@ -330,7 +330,7 @@ can customize this by:
         list do
           field :name
           field :created_at do
-            column_css_class "customClass"
+            css_class "customClass"
           end
         end
       end
