Document how to override Devise model in install generator.

--- a/README.mkd
+++ b/README.mkd
@@ -47,6 +47,11 @@ This task will install RailsAdmin and [Devise](http://github.com/plataformatec/d
 don't already have it installed. [Devise](http://github.com/plataformatec/devise) is strongly
 recommended to protect your data from anonymous users.
 
+If you plan to use Devise, but want to use a custom model for authentication
+(default is User) you can provide that as an argument for the installer. For example
+to override the default with a Member model run:
+    $ rails generate rails_admin:install_admin member
+
 Usage
 -----
 Start the server:
