Fixing and creating the pt-BR translations.

--- a/config/locales/rails_admin.pt-BR.yml
+++ b/config/locales/rails_admin.pt-BR.yml
@@ -9,12 +9,12 @@ pt-BR:
       pagename: "Administração do site"
       name: "Painel"
       model_name: "Nome do model"
-      last_used: "Último uso"
+      last_used: "Última utilização"
       records: "Registros"
       modify: "Modificar"
       add_new: "Adicionar"
       show: "Exibir"
-      ago: "ago"
+      ago: "atrás"
     history:
       name: "Histórico"
       page_name: "Histórico de %{name}"
@@ -49,9 +49,9 @@ pt-BR:
       error: "%{name} falhou em %{action}"
       noaction: "Não ocorreram ações."
     actions:
-      create: "create"
-      created: "created"
-      update: "update"
-      updated: "updated"
-      delete: "delete"
-      deleted: "deleted"
+      create: "criar"
+      created: "criado"
+      update: "atualizar"
+      updated: "atualizado"
+      delete: "deletar"
+      deleted: "deletado"
