Continue removing documentation related to using an accessor, see commit da71a3ccd99bb12cc684c26aa8dcc88ca0af7c80

--- a/README.mkd
+++ b/README.mkd
@@ -109,12 +109,12 @@ Or by passing a block that will be lazy evaluated each time the option is read:
       end
     end
 
-These three examples also work as a generic example of how most of the configuration options
-function within RailsAdmin. You can access them with `option_name = value`, you
-can pass a value as an argument `option_name value`, or you can pass in a block
-which will be evaluated each time the option is read. Notable is that boolean options'
-reader accessors will be appended with ? whereas the writers will not be. That is, if you
-want to get the Team model's visibility in navigation, you use
+These two examples also work as a generic example of how most of the
+configuration options function within RailsAdmin. You can pass a value as an
+argument `option_name value`, or you can pass in a block which will be
+evaluated each time the option is read. Notable is that boolean options' reader
+accessors will be appended with ? whereas the writers will not be. That is, if
+you want to get the Team model's visibility in navigation, you use
 `RailsAdmin.config(Team).navigation.visible?`.
 
 Back to navigation configuration - there is also an alias method that can be used:
@@ -173,7 +173,7 @@ which allows all three forms of configuration value passing as well.
 You can configure the number of tabs visible in the top navigation:
 
     RailsAdmin.config do |config|
-      config.navigation.max_visible_tabs = 3
+      config.navigation.max_visible_tabs 3
     end
 
 Links to the rest of the models will be rendered in a drop down menu next to the
