--- a/config/locales/devise.ru.yml
+++ b/config/locales/devise.ru.yml
@@ -7,7 +7,7 @@ ru:
 
   devise:
     failure:
-      unauthenticated: 'Вам нужно войти или рарегистрироваться перед тем, как продолжить.'
+      unauthenticated: 'Вам нужно войти или зарегистрироваться перед тем, как продолжить.'
       unconfirmed: 'Вам нужно подтвердить вашу учётную запись перед тем, как продолжить.'
       locked: 'Ваша учётная запись заблокирована.'
       invalid: 'Неверный адрес электронной почты или неверный пароль.'
@@ -22,7 +22,7 @@ ru:
       updated: 'Ваш пароль был успешно изменён. Вы сейчас вошли.'
     confirmations:
       send_instructions: 'Вы получите письмо по электронной почте с инструкциями, как подтвердить вашу учётную запись, в течение ближайших нескольких минут.'
-      confirmed: 'Ваша учётная запись успешн подтверждена. Вы сейчас вошли.'
+      confirmed: 'Ваша учётная запись успешно подтверждена. Вы сейчас вошли.'
     registrations:
       signed_up: 'Вы успешно зарегистрировались. Если настроено, подтверждение было выслано на ваш адрес электронной почты.'
       updated: 'Вы успешно обновили вашу учётную запись.'
